ANN Model Added

--- a/models/ANN - Prediction.ipynb
+++ b/models/ANN - Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "e751f6c8",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "c378112d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "5c31c7bf",
    "metadata": {},
    "outputs": [
@@ -280,7 +281,7 @@
        "[530652 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "ea842fe2",
    "metadata": {},
    "outputs": [
@@ -544,7 +545,7 @@
        "[474015 rows x 12 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "c15f1768",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1008,7 @@
        "[530652 rows x 25 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "951d6a33",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1479,7 @@
        "[530652 rows x 25 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "c0cbab80",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "fd6e1eee",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "941a5851",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "ce418215",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1686,7 @@
        "[530652 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "c21a1e8e",
    "metadata": {},
    "outputs": [],
@@ -1706,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "588f282a",
    "metadata": {},
    "outputs": [
@@ -2132,7 +2133,7 @@
        "[530652 rows x 31 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2143,40 +2144,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "id": "8a4e0d01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_df=final_df.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "f3129012",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 4, got 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x_train,x_test,y_train,y_test\u001b[38;5;241m=\u001b[39mtrain_test_split(final_df)\n",
-      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 2)"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Crime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476285</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476286</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476287</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476288</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476289</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>476290 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Crime\n",
+       "0           0\n",
+       "1           1\n",
+       "2           0\n",
+       "3           0\n",
+       "4           1\n",
+       "...       ...\n",
+       "476285      1\n",
+       "476286      0\n",
+       "476287      0\n",
+       "476288      1\n",
+       "476289      0\n",
+       "\n",
+       "[476290 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    " \n",
-    "x_train,x_test,y_train,y_test=train_test_split()"
+    "final_df=final_df.dropna()\n",
+    "X=final_df[['HOUR','Latitude','Longitude']]\n",
+    "num_rows = 476290\n",
+    "\n",
+    "random_list = [random.randint(0.0, 1.0) for i in range(num_rows)]\n",
+    "Y = pd.DataFrame({'Crime': random_list})\n",
+    "Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
+   "id": "f3129012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test=train_test_split(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "6cc9ff4c",
    "metadata": {},
    "outputs": [],
@@ -2189,20 +2279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 78,
    "id": "e818aee6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Flatten(input_shape=(476290,31)))\n",
+    "model.add(Flatten(input_shape=(3,)))\n",
     "model.add(Dense(128,activation='relu'))\n",
+    "model.add(Dense(64,activation='relu'))\n",
     "model.add(Dense(32,activation='relu'))\n",
-    "model.add(Dense(3,activation='softmax')) "
+    "model.add(Dense(1,activation='softmax')) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "id": "b2f39931",
    "metadata": {},
    "outputs": [
@@ -2210,25 +2301,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " flatten_1 (Flatten)         (None, 10)                0         \n",
+      " flatten_5 (Flatten)         (None, 3)                 0         \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 10)                0         \n",
+      " dense_17 (Dense)            (None, 128)               512       \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 10)                0         \n",
+      " dense_18 (Dense)            (None, 64)                8256      \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               1408      \n",
+      " dense_19 (Dense)            (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 32)                4128      \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 10)                330       \n",
+      " dense_20 (Dense)            (None, 1)                 33        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5866 (22.91 KB)\n",
-      "Trainable params: 5866 (22.91 KB)\n",
+      "Total params: 10881 (42.50 KB)\n",
+      "Trainable params: 10881 (42.50 KB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
@@ -2240,23 +2329,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "id": "ee426589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss='sparse_categorical_crossentropy', optimizer='Adam',metrics=['accuracy'])"
+    "model.compile(loss='binary_crossentropy', optimizer='Adam',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "cf0936b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 2/10\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 3/10\n",
+      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 4/10\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 5/10\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 6/10\n",
+      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 7/10\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 8/10\n",
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 9/10\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "Epoch 10/10\n",
+      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x2361f2c1f60>"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=10, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "62bd21de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ali Rashid\\anaconda3\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('model.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0936b7",
+   "id": "71ff32e0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "history=model.fit(X_train,y_train,epochs=25,validation_split=0.2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
