pkl models added

--- a/models/ANN - Prediction.ipynb
+++ b/models/ANN - Prediction.ipynb
@@ -2246,7 +2246,7 @@
    ],
    "source": [
     "final_df=final_df.dropna()\n",
-    "X=final_df[['HOUR','Latitude','Longitude']]\n",
+    "X=final_df[['HOUR','Latitude','Longitude','NEIGHBOURHOOD_Arbutus Ridge']]\n",
     "num_rows = 476290\n",
     "\n",
     "random_list = [random.randint(0.0, 1.0) for i in range(num_rows)]\n",
@@ -2256,17 +2256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 131,
    "id": "f3129012",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train,x_test,y_train,y_test=train_test_split(X,Y)"
+    "x_train,x_test,y_train,y_test=train_test_split(X,Y,random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 132,
    "id": "6cc9ff4c",
    "metadata": {},
    "outputs": [],
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 133,
    "id": "e818aee6",
    "metadata": {},
    "outputs": [],
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 134,
    "id": "b2f39931",
    "metadata": {},
    "outputs": [
@@ -2301,19 +2301,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " flatten_5 (Flatten)         (None, 3)                 0         \n",
+      " flatten_6 (Flatten)         (None, 3)                 0         \n",
       "                                                                 \n",
-      " dense_17 (Dense)            (None, 128)               512       \n",
+      " dense_21 (Dense)            (None, 128)               512       \n",
       "                                                                 \n",
-      " dense_18 (Dense)            (None, 64)                8256      \n",
+      " dense_22 (Dense)            (None, 64)                8256      \n",
       "                                                                 \n",
-      " dense_19 (Dense)            (None, 32)                2080      \n",
+      " dense_23 (Dense)            (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_20 (Dense)            (None, 1)                 33        \n",
+      " dense_24 (Dense)            (None, 1)                 33        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 10881 (42.50 KB)\n",
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 135,
    "id": "ee426589",
    "metadata": {},
    "outputs": [],
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 136,
    "id": "cf0936b7",
    "metadata": {},
    "outputs": [
@@ -2348,34 +2348,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 31s 3ms/step - loss: 0.6933 - accuracy: 0.4996\n",
       "Epoch 2/10\n",
-      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 28s 3ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 3/10\n",
-      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 28s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 4/10\n",
-      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 5/10\n",
-      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 6/10\n",
-      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 7/10\n",
-      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 28s 3ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 8/10\n",
-      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 9/10\n",
-      "11164/11164 [==============================] - 26s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n",
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n",
       "Epoch 10/10\n",
-      "11164/11164 [==============================] - 25s 2ms/step - loss: 0.6932 - accuracy: 0.4995\n"
+      "11164/11164 [==============================] - 27s 2ms/step - loss: 0.6932 - accuracy: 0.4996\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x2361f2c1f60>"
+       "<keras.src.callbacks.History at 0x2362c24f130>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2386,27 +2386,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "62bd21de",
+   "execution_count": 116,
+   "id": "48a899a8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ali Rashid\\anaconda3\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-      "  saving_api.save_model(\n"
+      "3722/3722 [==============================] - 7s 2ms/step\n"
      ]
     }
    ],
+   "source": [
+    "y=model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "2a4c098f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y=pd.DataFrame(y)\n",
+    "count =0\n",
+    "for num in y[0]:\n",
+    "    if num==0:\n",
+    "        count=count+1\n",
+    "        \n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "62bd21de",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.save('model.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "71ff32e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "model.save('model.h5')\n",
+    "\n",
+    "loaded_model = tf.keras.models.load_model('model.h5')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "8de6894c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features=[[0.12,0.990242,0.011840]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e861625d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 150ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.predict(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b9441cd",
    "metadata": {},
    "outputs": [],
    "source": []
